<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="279dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txv0"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:text="@string/text1"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_light"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/h1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txv1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingTop="30dp"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="30dp"
                    android:text="@string/colon"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/txv2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingTop="30dp"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="30dp"
                    android:text="@string/colon"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/txv3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingTop="30dp"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="50sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b1"
                style="@android:style/Widget.Holo.Button.Toggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:text="@string/start"
                android:textSize="36sp" />

            <Button
                android:id="@+id/b2"
                style="@android:style/Widget.Holo.Button.Toggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:text="@string/stop"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txv4"
                android:layout_width="match_parent"
                android:layout_height="118dp"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/tip1"
                        android:paddingTop="20dp"
                        android:text="@string/name"
                        android:textAlignment="center"
                        android:textSize="30sp" />

                    <EditText
                        android:id="@+id/edt1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:editable="false"
                        android:ems="10"
                        android:hint="@string/tip1"
                        android:inputType="textPersonName"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/tip2"
                        android:paddingTop="20dp"
                        android:text="@string/pwd"
                        android:textAlignment="center"
                        android:textSize="30sp" />

                    <EditText
                        android:id="@+id/edt2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:editable="false"
                        android:ems="10"
                        android:hint="@string/tip2"
                        android:inputType="textPassword"
                        android:textSize="30sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>